loading the ejs files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <link href="assets/style.css" type="text/css" rel="stylesheet"/>
+    </head>
     <body>
-        <h1></h1>
+        Hello World!!!
     </body>
 </html>
