--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,12 @@
         <link href="assets/style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
-        Hello World!!!
+        <h1>Hello World!!!</h1>
+        <form method="POST" action="/person">
+            first name: <input type="text" id="firstname" name="firstname" /><br/>
+            last name: <input type="text" id="lastname" name="lastname" /><br/>
+            <input type="submit" value="Submit"/>
+
+        </form>
     </body>
 </html>
