--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="assets/style.css" type="text/css" rel="stylesheet"/>
+        <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     </head>
     <body>
         <h1>Hello World!!!</h1>
@@ -10,5 +11,15 @@
             <input type="submit" value="Submit"/>
 
         </form>
+        <script>
+            $.ajax({
+                type: "POST",
+                url: "/personjson",
+                data: JSON.stringify({ firstname : 'Jane',
+                                        lastname: 'Doe'}),
+                dataType: 'json',
+                contentType: 'application/json'
+            })
+        </script>
     </body>
 </html>
