--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>The MEAN Stack</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
     </head>
     <body>
-        
+
     </body>
 </html>
