--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,9 @@
                 {{ person.name }}
             </li>
         </ul>
+        <script>
+            var clientPeople = <%- JSON.stringify(serverPeople) %>
+        </script>
         <script src="/assets/js/app.js"></script>
     </body>
 </html>
